demos/probes/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: probes
spec:
  selector:
    app: probes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
